--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,13 +15,17 @@
         android:theme="@android:style/Theme.NoTitleBar"
         >
         <!-- android:theme="@style/AppTheme" -->
-        		
+        
         <activity
             android:name="com.nebadje.dicziunari.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            >
+            <!-- 
+            android:configChanges="orientation"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
